Updates for model porting tutorial.

--- a/runway.yml
+++ b/runway.yml
@@ -1,5 +1,5 @@
 python: 3.6
 cuda: 9.2
-entrypoint: python model.py
+entrypoint: python runway_model.py
 build_steps:
   - pip install -r requirements.txt
